--- a/Clash/All.yaml
+++ b/Clash/All.yaml
@@ -8,7 +8,7 @@ lan-allowed-ips:
 lan-disallowed-ips: []
 ### 用户验证
 authentication:
-  - "schroe:hyperapp"
+  - schroe:hyperapp
 skip-auth-prefixes:
   - 127.0.0.1/32
   - ::1/128
@@ -34,7 +34,7 @@ external-controller: 0.0.0.0:9090
 #external-controller-pipe: \\.\pipe\mihomo
 #external-controller-tls: 127.0.0.1:9443
 #external-doh-server: /dns-query
-secret: "hyperapp"
+secret: hyperapp
 ## 外部用户界面
 external-ui: ui
 ## 自定义外部用户界面名字
@@ -99,9 +99,9 @@ dns:
     - geosite:private
     - geosite:cn
   fake-ip-filter-mode: blacklist
-  use-hosts: false
+  use-hosts: true
   use-system-hosts: false
-  #respect-rules: true #强烈不建议和 prefer-h3 一起使用
+  respect-rules: false
   default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
@@ -139,16 +139,16 @@ dns:
 
 # hosts
 hosts:
-  "91.108.56.100": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.101": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.104": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.107": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.125": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.126": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.128": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "91.108.56.156": [91.108.56.147, 91.108.56.135, 91.108.56.130]
-  "iosapps.itunes.apple.com": iosapps.itunes.apple.com.download.ks-cdn.com
-  "updates.g.aaplimg.com": updates.cdn-apple.com.download.ks-cdn.com
+  91.108.56.100: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.101: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.104: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.107: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.125: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.126: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.128: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  91.108.56.156: [91.108.56.147, 91.108.56.135, 91.108.56.130]
+  iosapps.itunes.apple.com: iosapps.itunes.apple.com.download.ks-cdn.com
+  updates.g.aaplimg.com: updates.cdn-apple.com.download.ks-cdn.com
 
 # 域名嗅探
 sniffer:
@@ -223,7 +223,7 @@ tun:
   #endpoint-independent-nat: false
   #route-address-set:
   #  - ruleset-1
-  #route-exclude-address-set:
+  route-exclude-address: []
   #  - ruleset-2
   #route-address:
   #  - 0.0.0.0/1
