--- a/Surge/DNSnoLeak.conf
+++ b/Surge/DNSnoLeak.conf
@@ -78,19 +78,20 @@ Apple = select, DIRECT, HK, JP, US, SG, TW
 OneDrive = select, DIRECT, GLOBAL
 Speedtest = select, DIRECT, HK, JP, US, SG, TW, UN, SS+TLS, 高级线路, 标准线路, 实验线路0.2X, Proxies
 Final = select, DIRECT, GLOBAL, REJECT
-UN = select, policy-regex-filter=^(?!.*?(香港|日本|新加坡|美国|台湾|实验)).*(标准), include-other-group=Proxies, hidden=1
-HK = smart, policy-regex-filter=香港, include-other-group=Proxies, hidden=1
-JP = smart, policy-regex-filter=日本, include-other-group=Proxies, hidden=1
-US = smart, policy-regex-filter=美国, include-other-group=Proxies, hidden=1
-SG = smart, policy-regex-filter=新加坡, include-other-group=Proxies, hidden=1
-TW = smart, policy-regex-filter=台湾, include-other-group=Proxies, hidden=1
-高级线路 = select, policy-regex-filter=高级, include-other-group=Proxies, hidden=1
-标准线路 = select, policy-regex-filter=标准, include-other-group=Proxies, hidden=1
-实验线路0.2X = select, policy-regex-filter=实验, include-other-group=Proxies, hidden=1
+UN = select, policy-regex-filter=^(?!.*?(香港|日本|新加坡|美国|台湾|实验)).*(标准), include-other-group=Proxies
+HK = smart, policy-regex-filter=(香港).*(高级), include-other-group=Proxies, hidden=1
+JP = smart, policy-regex-filter=(日本).*(高级), include-other-group=Proxies, hidden=1
+US = smart, policy-regex-filter=(美国).*(高级), include-other-group=Proxies, hidden=1
+SG = smart, policy-regex-filter=(新加坡).*(高级), include-other-group=Proxies, hidden=1
+TW = smart, policy-regex-filter=(台湾).*(高级), include-other-group=Proxies, hidden=1
+高级线路 = select, policy-regex-filter=高级, include-other-group=Proxies
+标准线路 = select, policy-regex-filter=标准, include-other-group=Proxies
+实验线路0.2X = select, policy-regex-filter=实验, include-other-group=Proxies
 Proxies = select, policy-path={url}
 
 [Rule]
 # 白名单
+DOMAIN,feiyang.allinhub.dpdns.org,DIRECT
 DOMAIN,update.code.visualstudio.com,DIRECT // VSCode更新
 DOMAIN-SUFFIX,msecnd.net,DIRECT // VSCode更新
 DOMAIN-SUFFIX,rztcd.com,DIRECT // 蓉政通
@@ -99,6 +100,7 @@ DOMAIN-SUFFIX,bendibao.com,DIRECT // 成都本地宝
 DOMAIN-SUFFIX,cdrcbank.com,DIRECT // 成都农商银行
 DOMAIN-SUFFIX,splashtop.com,DIRECT // Splashtop
 # 黑名单
+DOMAIN,img.noobzone.ru,GLOBAL // V2EX图片
 DOMAIN,connect.garmin.com,GLOBAL // 佳明国际账号
 DOMAIN,sso.garmin.com,GLOBAL // 佳明国际账号
 DOMAIN-SUFFIX,mailjet.com,GLOBAL // 邮件发送服务
