--- a/subconverter/pref.ini
+++ b/subconverter/pref.ini
@@ -63,7 +63,7 @@ config_update_strict=false
 ;surge_ssr_path=/usr/bin/ssr-local
 
 [emojis]
-add_emoji=false
+add_emoji=true
 remove_old_emoji=false
 rule=!!import:snippets/emoji.txt
 
