--- a/subconverter/sf_pref.ini
+++ b/subconverter/sf_pref.ini
@@ -153,8 +153,8 @@ quanx_device_id=
 resolve_hostname=true
 
 [emojis]
-add_emoji=true
-remove_old_emoji=true
+add_emoji=false
+remove_old_emoji=false
 
 ;添加表情符号的规则。支持正则表达式。
 ;格式：Remark_Search_Pattern,emoji
@@ -221,7 +221,7 @@ ruleset=!!import:snippets/rulesets.txt
 ;custom_proxy_group=!!import:snippets/groups_forcerule.txt
 
 ;for Surge rulesets
-custom_proxy_group=!!import:snippets/groups.txt
+;custom_proxy_group=!!import:snippets/groups.txt
 
 [template]
 ;模板中'include'语句的文件作用域限制。
