--- a/subconverter/sf_pref.ini
+++ b/subconverter/sf_pref.ini
@@ -18,6 +18,7 @@ prepend_insert_url=true
 ;排除备注匹配以下模式的节点。支持正则表达式。
 ;exclude_remarks=(到期|剩余流量|时间|官网|产品|平台)
 ;exclude_remarks=(other rule)
+exclude_remarks=(Direct|DIRECT|直连)
 
 ;仅包含备注匹配以下模式的节点。支持正则表达式。
 ;include_remarks=V3.*港
@@ -153,7 +154,7 @@ quanx_device_id=
 resolve_hostname=true
 
 [emojis]
-add_emoji=false
+add_emoji=true
 remove_old_emoji=false
 
 ;添加表情符号的规则。支持正则表达式。
@@ -221,7 +222,7 @@ ruleset=!!import:snippets/rulesets.txt
 ;custom_proxy_group=!!import:snippets/groups_forcerule.txt
 
 ;for Surge rulesets
-;custom_proxy_group=!!import:snippets/groups.txt
+custom_proxy_group=!!import:snippets/groups.txt
 
 [template]
 ;模板中'include'语句的文件作用域限制。
