--- a/subconverter/sf_pref.ini
+++ b/subconverter/sf_pref.ini
@@ -154,7 +154,7 @@ quanx_device_id=
 resolve_hostname=true
 
 [emojis]
-add_emoji=true
+add_emoji=false
 remove_old_emoji=false
 
 ;添加表情符号的规则。支持正则表达式。
