--- a/Clash/All.yaml
+++ b/Clash/All.yaml
@@ -411,7 +411,7 @@ rules:
   - DOMAIN-SUFFIX, api-flowercloud.com, Global
   - DOMAIN-SUFFIX, rutracker.org, Global
   - DOMAIN-SUFFIX, linux.do, Global
-  - DOMAIN-SUFFIX, imazing.com, GLOBAL
+  - DOMAIN-SUFFIX, rclone.org, GLOBAL
   # Emby
   - DOMAIN-SUFFIX, uhdnow.com, Emby
   # JavBus
